[gd_scene load_steps=15 format=3 uid="uid://dnmnouo7t8spr"]

[ext_resource type="Script" path="res://character/player/player_main.gd" id="1_20ppy"]
[ext_resource type="Script" path="res://character/finite_state_machine.gd" id="2_4c1r2"]
[ext_resource type="Script" path="res://character/player/idle_state.gd" id="3_t8ura"]
[ext_resource type="Script" path="res://character/player/move_state.gd" id="4_65qnv"]
[ext_resource type="Script" path="res://character/player/jump_state.gd" id="5_8eax6"]
[ext_resource type="Script" path="res://character/player/fall_state.gd" id="6_h1x3b"]
[ext_resource type="Script" path="res://character/component/hitbox_component.gd" id="7_qvr74"]
[ext_resource type="Script" path="res://character/component/health_component.gd" id="8_v8fai"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cb2ke"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_17nu4"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="Animation" id="Animation_dwlcv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_pejvp"]
resource_name = "idle"
length = 5.4
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Head/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 2, 3.5, 4, 5.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.00349066, 0, 0), Vector3(-0.00523599, 0, 0), Vector3(-0.00349066, 0, 0), Vector3(0.0139626, 0, 0), Vector3(0.00523599, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Head/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8yu5m"]
resource_name = "walk"
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Head/Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.00523599, 0, 0), Vector3(-0.00174533, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Head/Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.14, 0.28, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.02, 0), Vector3(0, 0, 0), Vector3(0, -0.0109894, 0), Vector3(0, -0.00299037, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g3lpx"]
_data = {
"RESET": SubResource("Animation_dwlcv"),
"idle": SubResource("Animation_pejvp"),
"walk": SubResource("Animation_8yu5m")
}

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_20ppy")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_cb2ke")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_17nu4")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_4c1r2")
initial_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("player", "shake_animator", "camera")]
script = ExtResource("3_t8ura")
player = NodePath("../..")
shake_animator = NodePath("../../CameraShakeAnimator")
camera = NodePath("../../Head/Camera3D")

[node name="MoveState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("player", "shake_animator", "camera")]
script = ExtResource("4_65qnv")
player = NodePath("../..")
shake_animator = NodePath("../../CameraShakeAnimator")
camera = NodePath("../../Head/Camera3D")

[node name="JumpState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("player", "camera")]
script = ExtResource("5_8eax6")
player = NodePath("../..")
camera = NodePath("../../Head/Camera3D")

[node name="FallState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("player", "camera")]
script = ExtResource("6_h1x3b")
player = NodePath("../..")
camera = NodePath("../../Head/Camera3D")

[node name="CameraShakeAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g3lpx")
}
playback_default_blend_time = 2.0
speed_scale = 0.35

[node name="HitboxComponent" type="Area3D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 2
collision_mask = 0
script = ExtResource("7_qvr74")
health_component = NodePath("../HealthComponent")

[node name="Collision" type="CollisionShape3D" parent="HitboxComponent"]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_17nu4")

[node name="HealthComponent" type="Node3D" parent="."]
script = ExtResource("8_v8fai")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.352
anchor_bottom = 0.106
offset_right = -0.504028
offset_bottom = 0.311996

[connection signal="death" from="HealthComponent" to="." method="_on_health_component_death"]
